# kontext21-node

./: .gitignore  Cargo.toml  README.md  biome.json  index.d.ts  index.js  jest.config.ts  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json
.cargo/: config.toml
.github/workflows/: CI.yml  lint.yml
__test__/: index.spec.ts  index.test.ts  tsconfig.json
k21/: index.d.ts  index.js  index.ts  k21.ts  k21_internal.ts  lib.ts  native-k21.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: capture.rs  image.rs  lib.rs  pipeline.rs  process.rs  types.rs
