[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k21         = { git = "https://github.com/kontext21/k21.git" }
napi        = { version = "2.0.0", features = ["tokio_rt"] }
napi-derive = "2.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
