[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# k21 = { git = "https://github.com/kontext21/k21.git" }
k21 = { git = "https://github.com/kontext21/k21.git", branch = "changes_for_ts_middleppoint" }
# k21 = { path = "../k21/libs/k21/" }
napi = { version = "2.16.13", default-features = false, features = [
  "napi8",
  "serde-json",
  "tokio_rt",
] }
napi-derive = { version = "2.16.13", default-features = false }

[build-dependencies]
napi-build = "2.1.3"      # For building Node.js native modules

[profile.release]
codegen-units = 1
lto = "fat"
